Add AI recommendation system with AWS Bedrock integration

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=3001
 MONGODB_URI=mongodb+srv://admin:admin123@cluster0.zxlwopw.mongodb.net/wealth-management-app-db?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your-super-secret-jwt-key-2025
+AWS_ACCESS_KEY_ID=AKIAXEFUNDCPMRSXED6Z
+AWS_SECRET_ACCESS_KEY=ICmqJePxkQsPobh28icHktoM/1yQuxKJLyBn/nvy
+AWS_REGION=us-east-1
