--- a/config-template.env
+++ b/config-template.env
@@ -1,13 +1,6 @@
-# Server Configuration
-PORT=3001
-
-# Database Configuration
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/database-name?retryWrites=true&w=majority&appName=Cluster0
-
-# JWT Configuration
-JWT_SECRET=your_jwt_secret_key_here
-
-# AWS Bedrock Configuration
-AWS_ACCESS_KEY_ID=your_access_key_here
-AWS_SECRET_ACCESS_KEY=your_secret_access_key_here
-AWS_REGION=us-east-1
+# PORT=3001
+# MONGODB_URI=mongodb+srv://admin:admin123@cluster0.zxlwopw.mongodb.net/wealth-management-app-db?retryWrites=true&w=majority&appName=Cluster0
+# JWT_SECRET=your-super-secret-jwt-key-2025
+# AWS_ACCESS_KEY_ID=AKIAXEFUNDCPMRSXED6Z
+# AWS_SECRET_ACCESS_KEY=ICmqJePxkQsPobh28icHktoM/1yQuxKJLyBn/nvy
+# AWS_REGION=us-east-1
